update order with multi theme function

--- a/src/app/components/sideNavComponents/nav-sales-person/nav-sales-person.component.scss
+++ b/src/app/components/sideNavComponents/nav-sales-person/nav-sales-person.component.scss
@@ -1,6 +1,6 @@
  @use "variables" as *;
  .salesPerson{
-     border-top:.05px solid $secondary-light;
+     border-top:.05px solid $bg-secondary-light;
   }
 
 
