--- a/src/app/components/sideNavComponents/sidenav/sidenav.component.scss
+++ b/src/app/components/sideNavComponents/sidenav/sidenav.component.scss
@@ -19,7 +19,7 @@
     background-color:$semi-light;
   }
   .sidenav-section-one{
-    border-bottom:.05px solid $secondary-light
+    border-bottom:.05px solid $net-total-border
   }
   ul {
     list-style: none;
