--- a/src/app/features/orders/shared/order-products/order-products.component.html
+++ b/src/app/features/orders/shared/order-products/order-products.component.html
@@ -12,9 +12,9 @@
 
 <div class="table-container  flex-grow-1">
   <table class="table table-striped">
-  <thead>
+  <thead >
     <tr>
-      <th scope="col" colspan="4" >
+      <th scope="col" colspan="4"  class="custom-header-row">
               <span>{{'Name' | translate}}</span> <i class="ps-1 fa-solid fa-arrow-down"></i>
       </th>
     </tr>
