--- a/src/app/features/orders/shared/order-details/order-details.component.html
+++ b/src/app/features/orders/shared/order-details/order-details.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid px-0  overflow-auto" style="height: 100vh;">
+<div class="container-fluid px-2  overflow-auto bg-dropdown" style="height: 100vh;">
   <div class="row g-2" >
   <div class="col-12 col-lg flex-grow-1 py-3" style="height: 100vh;">
   <div class="d-flex flex-column section-style rounded rounded-3 px-4 py-3" style="height: 100%;">
@@ -25,12 +25,12 @@
 
       </app-input>
           <ul
-            class="list-group  position-absolute shadow-sm z-3"
+            class="list-group bg-dropdown  position-absolute shadow-sm z-3"
             *ngIf="searchItems.length > 0"
             style="max-height: 330px; overflow-y: auto;"
           >
             <li
-              class="list-group-item py-1 list-group-item-action"
+              class="list-group-item text-input py-1  list-group-item-action"
               *ngFor="let item of searchItems"
               (click)="selectItem(item)"
             >
@@ -78,7 +78,7 @@
     </div>
   </div>
 </div>
-  <div class="col-12 col-lg-auto py-3" style="height: 100vh;">
+  <div class="col-12 col-lg-auto py-3 section_2Container">
   <div class="section_2 section-style rounded rounded-3 h-100 pt-3 px-4 d-flex flex-column">
     <div class="d-flex mb-3  align-items-center  selectCustomerContainer flex-grow-0">
       <app-select-input
@@ -95,11 +95,11 @@
         (selectedOption)="selectedCustomerEvent($event)"
         class="flex-grow-1">
       </app-select-input>
-      <button class="btn bg-dark  align-self-end ms-2" (click)="showAddNewCustomerForm()">
+      <button class="btn bg-submit-btn text-input  align-self-end ms-2" (click)="showAddNewCustomerForm()">
         <i class="fa-solid text-white fa-plus"></i>
       </button>
     </div>
-    <div class="flex-grow-1 overflow-auto" style="min-height: 0;">
+    <div class="flex-grow-1 paymentSection" style="min-height: 0;">
       <div class="d-flex flex-column h-100">
         <app-home-payment class="flex-grow-1 h-100" [order]="OrderDetailsData.order" (clearCustomer)="clearCustomerFn()"></app-home-payment>
       </div>
