--- a/src/app/features/orders/shared/payment-buttons/payment-buttons.component.html
+++ b/src/app/features/orders/shared/payment-buttons/payment-buttons.component.html
@@ -1,7 +1,7 @@
   <div class="col-12 paymentButtons">
         <div class="row gy-2">
           <div class="col-12">
-            <button class="btn w-100 bg-dark text-light py-3" (click)="pay_Order()">{{'Pay' | translate}}</button>
+            <button class="btn w-100 bg-submit-btn text-light py-3" (click)="pay_Order()">{{'Pay' | translate}}</button>
           </div>
           <div class="col-12">
             <div class="row gx-2">
