--- a/src/app/features/orders/shared/summary/summary.component.scss
+++ b/src/app/features/orders/shared/summary/summary.component.scss
@@ -1,9 +1,10 @@
 @use "variables.scss" as * ;
 .net-total-border{
+
   border:none;
 @media screen and (min-width : 768px) and (max-width : 992px){
   // border-left:2px solid $dark;
-  border-inline-start:2px solid $dark;
+  border-inline-start:2px solid $net-total-border;
 
 }
 @media screen and (min-width : 992px) and (max-width : 1200px){
@@ -11,7 +12,7 @@
 }
 @media screen and (min-width : 1200px){
   // border-left:2px solid $dark;
-    border-inline-start:2px solid $dark;
+    border-inline-start:2px solid $net-total-border;
 
 }
 }
