--- a/src/app/features/orders/return-order-code-form/return-order-code-form.component.html
+++ b/src/app/features/orders/return-order-code-form/return-order-code-form.component.html
@@ -8,7 +8,7 @@
   (closeChange)="close()"
   #addDetailsAlert
 >
-<div class="bg-white p-4">
+<div class="bg-popscreen p-4">
 <app-input
    [InputComponentData]="{
                 type: 'text',
