--- a/src/app/components/sideNavComponents/navitem/navitem.component.scss
+++ b/src/app/components/sideNavComponents/navitem/navitem.component.scss
@@ -1,3 +1,4 @@
+@use 'variables' as *;
 .subnav {
   list-style: none;
   margin: 0;
@@ -11,9 +12,9 @@
     cursor: pointer;
     border-radius: 0.375rem;
     transition: background-color 0.2s ease;
-
+    color:$light;
     &:hover {
-      background-color: rgba(0, 0, 0, 0.08); // same as .hover-bg
+      background-color: rgba(0, 0, 0, 0.08);
     }
 
     i {
