--- a/src/app/shared/components/no-items/no-items.component.html
+++ b/src/app/shared/components/no-items/no-items.component.html
@@ -1,4 +1,4 @@
-        <div class="d-flex py-2 flex-column">
+        <div class="d-flex py-2 flex-column shadow-sm">
           <h6 class="mb-1 ">{{NoItemsComponentData.header | translate}}</h6>
           <span class="fw-light fs-medium mb-4">{{NoItemsComponentData.subTitle | translate}}</span>
           <app-site-button
