--- a/src/app/features/customers/customer-card/customer-card.component.html
+++ b/src/app/features/customers/customer-card/customer-card.component.html
@@ -1,13 +1,13 @@
-<div class="card w-100  rounded-3 " >
+<div class="card w-100  rounded-3  border-light" >
   <div class="position-relative">
-    <div class="card-header head bg-semi-dark"></div>
-    <div class="head "></div>
+    <div class="card-header head bg-submit-btn"></div>
+    <div class="head bg-card-body"></div>
     <div class="position-absolute customerImage">
       <img src="assets/images/noImage.png" class="rounded-circle  w-100" alt="...">
     </div>
   </div>
-  <div class="card-body pt-0 text-center">
-    <h6 class="card-title mb-1">
+  <div class="card-body pt-0 text-center bg-card-body">
+    <h6 class="card-title mb-1 text-input">
       {{isRtl()? customer.firstNameAr:customer.firstNameEn | titlecase}}
       {{isRtl()?customer.lastNameAr:customer.lastNameEn | titlecase}}
     </h6>
@@ -18,7 +18,7 @@
       class="fs-verySmall text-center"
       [ngClass]="{
         'text-success': customer.isActive === true,
-        'text-muted': customer.isActive === false
+        'text-inactive': customer.isActive === false
       }">
       <i class="fa-solid fa-circle pe-1 fa-xs"></i>
       <span>
@@ -26,10 +26,10 @@
       </span>
     </div>
 
-    <div class="pt-2">
+    <div class="pt-2 text-input">
       <div class="d-flex align-items-center py-1">
         <i class="fa-solid fa-location-arrow pe-1 text-secondary"></i>
-        <div class="fs-verySmall text-center">
+        <div class="fs-verySmall text-center ">
           {{
             getFullAddress()
           }}
@@ -58,13 +58,13 @@
     <div>
     </div>
   </div>
-  <div class="card-footer">
+  <div class="card-footer bg-card-Bt">
     <div class="d-flex align-items-center justify-content-center fs-verySmall" (click)="deleteCustomer(customer)">
       <i class="fa-solid fa-trash pe-2"></i>
       <span>{{'Delete Customer' | translate}}</span>
     </div>
     </div>
-    <div class="card-footer bg-semi-dark text-white">
+    <div class="card-footer bg-submit-btn text-white">
       <div class="d-flex align-items-center justify-content-center fs-verySmall" (click)="editCustomerfN(customer)">
         <i class="fa-solid fa-user-pen pe-2"></i>
         <span>{{'Edit Customer' | translate}}</span>
