update component theme

--- a/src/app/shared/components/site-button/site-button.component.html
+++ b/src/app/shared/components/site-button/site-button.component.html
@@ -1,5 +1,5 @@
 <button
-class="btn bg-semi-dark fs-medium text-light d-flex align-items-center"
+class= "btn bg-submit-btn fs-medium text-light d-flex align-items-center"
 [routerLink]="BtnData.route"  [class.flex-row-reverse]="BtnData.iconDir=='last'">
 <ng-content #name></ng-content>
 <span>{{BtnData.BtnName | translate}}</span>
