--- a/src/app/features/products/variant-library-item/variant-library-item.component.html
+++ b/src/app/features/products/variant-library-item/variant-library-item.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-white">
+<div class="container-fluid bg-popscreen">
    <div class="row g-2 align-items-start  addNewVariant py-3">
     <div class="col-12">
     <div class="border">
@@ -114,7 +114,7 @@
                   </div>
               </div>
               <div class="col-12">
-                   <div class="position-relative bg-info">
+                   <div class="position-relative">
                     <app-input
                       [InputComponentData]="{
                       type: 'text',
