--- a/src/app/shared/components/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layout-header/layout-header.component.html
@@ -18,7 +18,7 @@
       </button>
     </div>
   </div>
-  <div class="col-lg-5 col-xl-7 text-end d-sm-none d-lg-block">
+  <div class="col-lg-5 col-xl-7 text-end d-none d-lg-block">
     <span class="icon-circle me-2" (click)="showLoyalPoint()"><i class="fa-solid fa-gift "></i></span>
     <span class="icon-circle" (click)="changeTheme()"> <i class="fa-solid fa-moon"></i></span>
   </div>
