--- a/src/app/shared/components/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layout-header/layout-header.component.html
@@ -1,19 +1,27 @@
 <div class="row">
   <div class="col-12 col-lg-7 col-xl-5">
     <div class="input-group shadow-sm">
-      <input type="text" class="form-control border-0" [placeholder]="selectionMessage | translate" [(ngModel)]="searchKey">
+      <input
+      type="text"
+      class="form-control"
+      placeholder="{{ selectionMessage }}"
+      [(ngModel)]="searchKey"
+      (ngModelChange)="onSearchKeyChange($event)"
+    />
 
       <div class="btn-group">
         <button type="button" class="btn btn-outline-semi-light text-input fs-verySmall rounded-0 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           {{dropdownSelection | translate}}
         </button>
-        <ul class="dropdown-menu bg-dropdown dropdown-menu-end">
+        <ul class="dropdown-menu bg-dropdown dropdown-menu-end ">
           <li (click)="changeSelection('Products')"><a class="dropdown-item text-input fs-verySmall">Products</a></li>
           <li (click)="changeSelection('Customers')"><a class="dropdown-item text-input fs-verySmall">Customers</a></li>
           <li (click)="changeSelection('Orders')"><a class="dropdown-item text-input fs-verySmall">Orders</a></li>
+          <li (click)="changeSelection('Categories')"><a class="dropdown-item text-input fs-verySmall">Categories</a></li>
+          <li (click)="changeSelection('Variants')"><a class="dropdown-item text-input fs-verySmall">Variants</a></li>
         </ul>
       </div>
-      <button class="btn btn-semi-light" type="button" (click)="search()">
+      <button class="btn btn-semi-light" type="button" (click)="sendSearchRequest()">
         <i class="fa-solid fa-magnifying-glass fa-sm"></i>
       </button>
     </div>
