--- a/src/styles/light-theme.scss
+++ b/src/styles/light-theme.scss
@@ -21,6 +21,7 @@
 --outline-color:#fff;
 --input-border-color:#DEE2E6;
 --input-group-text-bg-color:#F8F9FA;
+--gray-color:#a6aaab;
 
 //Page Controls styles
 --text-breadCrumb-color:#3F6263;
