--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -26,6 +26,10 @@
             <app-product-card [product]="product" (checkedProduct)="checkedProductFn($event)" [type]="type()" (deleteProduct)="deleteNewProduct($event)" [cardDisplayDirection]="cardDisplayDirection"></app-product-card>
           </div>
         </div>
+         <div class="d-flex justify-content-center">
+            <app-pagination [totalItems]="totalItems()" [currentPage]="currentPage()"
+            [pageSize]="pageSize()" (pageChanged)="setCurrentPage($event)"></app-pagination>
+         </div>
       </div>
 
 
