handle pagination in different component

--- a/src/app/features/customers/add-in-voice-new-customer/add-in-voice-new-customer.component.html
+++ b/src/app/features/customers/add-in-voice-new-customer/add-in-voice-new-customer.component.html
@@ -7,7 +7,7 @@
   (doneChange)="done()"
   (closeChange)="close()"
 >
-<div class="bg-white p-4">
+<div class="bg-popscreen p-4">
   <div class="row">
       <div class="col-lg-4" *ngFor="let field of inputFields">
      <app-input
