--- a/src/app/features/products/variant-type-center/variant-type-center.component.html
+++ b/src/app/features/products/variant-type-center/variant-type-center.component.html
@@ -46,6 +46,8 @@
             </div>
           </div>
   </div>
+  <app-pagination [totalItems]="__ProductService.variantTypePagination.totalItems()" [currentPage]="__ProductService.variantTypePagination.currentPage()"
+[pageSize]="__ProductService.variantTypePagination.pageSize()" (pageChanged)="setCurrentPage($event)"></app-pagination>
   </app-layout>
   </div>
 
