--- a/src/app/features/customers/customers.component.html
+++ b/src/app/features/customers/customers.component.html
@@ -16,12 +16,14 @@
 (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
 
-        <div class="row gy-3">
+         <div class="row gy-3">
           <div class="col-12 col-md-6 col-xl-4 col-xxl-3" *ngFor="let customer of customers()">
             <div class="h-100">
               <app-customer-card [customer]="customer" (editCustomer)="getEditCUstomerInfo($event)"></app-customer-card>
             </div>
           </div>
+            <app-pagination [totalItems]="__CustomerService.pagination.totalItems()" [currentPage]="__CustomerService.pagination.currentPage()"
+            [pageSize]="__CustomerService.pagination.pageSize()" (pageChanged)="setCurrentPage($event)"></app-pagination>
         </div>
 
         <app-filter-options filterOptions
