--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,4 +1,6 @@
-<nav aria-label="Page navigation">
+
+<div class="d-flex justify-content-center" *ngIf="totalItems > pageSize">
+  <nav aria-label="Page navigation">
   <ul class="pagination custom-pagination">
     <li class="page-item" [class.disabled]="currentPage === 1">
       <a
@@ -37,3 +39,4 @@
     </li>
   </ul>
 </nav>
+</div>
