move pagination to layput component and do ncessary adjstment

--- a/src/app/shared/components/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layout-header/layout-header.component.html
@@ -19,6 +19,8 @@
           <li (click)="changeSelection('Orders')"><a class="dropdown-item text-input fs-verySmall">Orders</a></li>
           <li (click)="changeSelection('Categories')"><a class="dropdown-item text-input fs-verySmall">Categories</a></li>
           <li (click)="changeSelection('Variants')"><a class="dropdown-item text-input fs-verySmall">Variants</a></li>
+          <li (click)="changeSelection('Variant Types')"><a class="dropdown-item text-input fs-verySmall">Variant Types</a></li>
+
         </ul>
       </div>
       <button class="btn btn-semi-light" type="button" (click)="sendSearchRequest()">
