--- a/src/app/features/products/components/add-variant/add-variant.component.html
+++ b/src/app/features/products/components/add-variant/add-variant.component.html
@@ -59,7 +59,7 @@
                       hideLabel: true,
                       inputGroup: false,
                       clickMessage: '',
-                      errorMessage: '',
+                      errorMessage: detailNameErrorMessage,
                       enableFocusBlurTracking: false,
                     }"
                       #detailName
@@ -82,7 +82,7 @@
                       hideLabel: true,
                       inputGroup: false,
                       clickMessage: '',
-                      errorMessage: '',
+                      errorMessage: detailNameArErrorMessage,
                       enableFocusBlurTracking: false,
                     }"
                       #detailNameAr
@@ -127,8 +127,7 @@
             </div>
           </div>
 
-          <!-- <div class="ps-2 align-self-start pt-3 pt-sm-0" *ngIf="values().length > 0" (click)="removeValue(index)"> -->
-        <!-- <div class="ps-2 align-self-start pt-3 pt-sm-0" *ngIf="values().length > 0" (click)="removeValue()"> -->
+
         <div class="ps-2 align-self-start pt-3 pt-sm-0" (click)="removeValue()">
             <i class="fa-regular fa-trash-can text-secondary cursor-pointer"></i>
           </div>
