add some styles

--- a/src/styles/light-theme.scss
+++ b/src/styles/light-theme.scss
@@ -32,10 +32,10 @@
 
 --bg-dropdown:#fff;
 --bg-card-Btn:#F8F8F8;
---bg-submit-btn:var(--semi-dark-color);
+--bg-submit-btn:#00857d;
 
 --bg-popscreen-pop:#fff;
---bg-popscreen-header:var(--semi-dark-color);
+--bg-popscreen-header:#00857d;
 --bg-popscreen-footer:#F8F9FA;
 --bg-filter:#fff;
 --text-btn:#fff;
@@ -43,5 +43,5 @@
 --bg-keypad:#EFEFEF;
 --net-total-border:#3F6263;
 --payment-border:#dbd8d8;
-
+--bg-auth:#fff;
 }
