--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -41,4 +41,6 @@ $bg-keypad:var(--bg-keypad);
 $net-total-border:var(--net-total-border);
 $payment-border:var(--payment-border);
 
+$bg-auth:var(--bg-auth);
+
 
