--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="container-fluid  px-0">
    <div class="bg-dark p-3 pe-4 w-100  d-flex d-md-none align-items-center justify-content-between">
     <i class="fa-solid ps-3 fa-bars text-white fa-lg" (click)="showSideNav()"></i>
@@ -29,6 +29,45 @@
 </div>
 <div>
   <app-theme ></app-theme>
+</div> -->
+
+
+
+ <div *ngIf="isLoggedIn(); else minimalView">
+  <div class="container-fluid px-0">
+    <div class="bg-dark p-3 pe-4 w-100 d-flex d-md-none align-items-center justify-content-between">
+      <i class="fa-solid ps-3 fa-bars text-white fa-lg" (click)="showSideNav()"></i>
+      <app-navitem
+        [NavitemComponentData]="{
+          isCollapsed: true,
+          navItemName: 'Shopping',
+          classes: 'text-white pe-1 logo'
+        }">
+        <img src="assets/images/Logo.png" alt="Logo Image" width="20px;" />
+      </app-navitem>
+    </div>
+
+    <div class="row gx-0">
+      <div class="col-auto flex-grow-0 d-none d-md-block" #sideNavContainer>
+        <app-sidenav #sideNav></app-sidenav>
+      </div>
+      <div class="col bg-second px-2 flex-grow-1" style="height: 100vh;">
+        <div class="d-flex flex-column" style="height: 100vh;">
+          <div *ngIf="shouldShowHeader()" class="py-3 px-2">
+            <app-layout-header></app-layout-header>
+          </div>
+          <div class="flex-grow-1 overflow-auto">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <app-theme></app-theme>
+  </div>
 </div>
 
-
+<ng-template #minimalView>
+  <router-outlet></router-outlet>
+</ng-template>
