update auth styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -91,6 +91,9 @@ html {
   .bg-second{
     background-color: $secondary;
   }
+  .bg-auth-layout{
+    background-color: $bg-auth-layout;
+  }
   .fs-verySmall{
     font-size:10px !important;
   }
