--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,5 +42,5 @@ $net-total-border:var(--net-total-border);
 $payment-border:var(--payment-border);
 
 $bg-auth:var(--bg-auth);
-
+$bg-auth-layout:var(--bg-auth-layout);
 
