--- a/src/app/features/auth/layout/layout.component.html
+++ b/src/app/features/auth/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="auth container-fluid px-4  position-relative overflow-hidden"  style="min-height: 100vh;">
+<div class="auth bg-auth-layout px-4  py-md-0  position-relative"  style="min-height: 100vh;">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="authSvg d-none d-md-block">
     <path fill="#f3f4f5" fill-opacity="0.61" d="M0,64L30,80C60,96,120,128,180,144C240,160,300,160,360,165.3C420,171,480,181,540,186.7C600,192,660,192,720,197.3C780,203,840,213,900,224C960,235,1020,245,1080,234.7C1140,224,1200,192,1260,197.3C1320,203,1380,245,1410,266.7L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
 
